fix numerous indentation and style inconsistancies, fix misc compiler warnings, update copyright